core. api-server: refactor /tasks API path
